# phosphor

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  LUA_BASE.md  Makefile  README.md  TODO.md  buff.hpp  build.sh  format.sh  init.lua  make.sh  test.txt  theme_idea.cpp  theme_idea.hpp  to_implement.cpp
phosphor/: CMakeLists.txt
phosphor/app/: main.cpp
phosphor/include/: app.hpp  editor.hpp  input.hpp  keychords.hpp  palette.hpp  scripting.hpp  ui.hpp
phosphor/phosphlib/app/: app.cpp  app.hpp
phosphor/phosphlib/editor/: editor.cpp  editor.hpp  gap_buffer.hpp  input.hpp  line_index.hpp
phosphor/phosphlib/gap_buffer/: gap_buffer.cpp  gap_buffer.hpp
phosphor/phosphlib/io/: input.hpp
phosphor/phosphlib/keychords/: keychords.hpp
phosphor/phosphlib/line_index/: line_index.hpp
phosphor/phosphlib/palette/: palette.hpp
phosphor/phosphlib/scripting/: scripting.cpp  scripting.hpp
phosphor/phosphlib/ui/: ui.cpp  ui.hpp
phosphor/src/: app.cpp  editor.cpp  gap_buffer.cpp  keychords.cpp  main.cpp  scripting.cpp  ui.cpp
